Fix horizontal scrollbar issue on small screen, White caret

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -11,6 +11,7 @@ html, body {
 
 body {
   scroll-behavior: smooth;
+  caret-color: #fff;
 }
 
 ::-webkit-scrollbar {
